fix overflow issue

--- a/day1/hw/spotify-clone/css-reset.css
+++ b/day1/hw/spotify-clone/css-reset.css
@@ -20,6 +20,8 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  width: 100vw;
+  height: 100vh;
 }
 /*
     5. Improve media defaults
