--- a/day1/hw/spotify-clone/index.css
+++ b/day1/hw/spotify-clone/index.css
@@ -7,16 +7,12 @@
     color: #fff;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 100vw;
 }
 
 .page-content {
     display: flex;
     gap: 0.5em;
     padding: 0.5em;
-    width: 100%;
-    height: 100%;
 }
 
 .box-gray {
@@ -90,9 +86,8 @@
 
 .btn {
     padding: 0.5em 1em;
-    /* background-color: #fff; */
     border-radius: 1em;
-    /* color: #000; */
+    border: none;
 }
 
 .home, .search {
